<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/appbar_padding_top"
    tools:context="com.exp0nge.calamari.NovelDetailFragment">

    <LinearLayout
        android:id="@+id/novel_detail_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/novel_detail_image"
                        android:layout_width="140dp"
                        android:layout_height="110dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/cover_photo_description"
                        android:src="@mipmap/no_cover" />

                    <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/novel_detail_image"
                        android:layout_centerInParent="true"
                        android:progressTint="?colorAccent"
                        android:rating="4" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/novel_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:drawableStart="@drawable/ic_import_contacts_accent"
                        android:maxLines="1"
                        android:drawablePadding="@dimen/drawableIconPadding"
                        android:gravity="center"
                        android:text="Web Novel" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/novel_type"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_tonality_accent"
                            android:maxLines="1"
                            android:drawablePadding="@dimen/drawableIconPadding"
                            android:gravity="center"
                            android:text="@string/genres_label" />

                        <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
                            android:id="@+id/genre_recycler_view"
                            android:scrollbars="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/genre_item" />


                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/novel_detail_top"
        android:padding="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/novel_detail_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/large_text" />

            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>
